<resources>
    <string name="app_name">Solovey</string>
    <string name="settings_btn">Settings</string>
    <string name="player_btn">Player</string>
    <string name="playList_btn">Play list</string>
    <string name="snd_down">-</string>
    <string name="snd_up">+</string>
    <string name="volume">volume</string>
    <string name="volume_value">50</string>
    <string name="username">Miroso</string>
</resources>