<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity">

    <Button
            android:text="@string/snd_down"
            android:layout_width="44dp"
            android:layout_height="40dp" android:id="@+id/snd_down"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="84dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="104dp" android:layout_marginStart="104dp"
    />
    <Button
            android:text="@string/snd_up"
            android:layout_width="42dp"
            android:layout_height="40dp" android:id="@+id/snd_up"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="84dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="232dp" android:layout_marginStart="232dp"/>
    <TextView
            android:text="@string/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/volume_text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="40dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="152dp" android:layout_marginStart="152dp" android:textSize="24sp"/>
    <TextView
            android:text="@string/volume_value"
            android:layout_width="57dp"
            android:layout_height="47dp" android:id="@+id/volume_value"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="164dp" android:layout_marginTop="84dp" android:layout_marginStart="164dp"
            android:textSize="24sp"/>
</androidx.constraintlayout.widget.ConstraintLayout>