<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/settings_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/settings"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="152dp" android:layout_marginStart="152dp"
            android:layout_marginTop="316dp"
    />
    <Button
            android:text="@string/player_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/player"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="396dp" android:layout_marginLeft="152dp" android:layout_marginStart="152dp"/>
    <Button
            android:text="@string/playList_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/playList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="152dp" android:layout_marginTop="224dp"
            android:layout_marginStart="152dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>